add load more, spinner, details functionality

--- a/source/index.html
+++ b/source/index.html
@@ -8,9 +8,10 @@
 <body ng-app="rxExperiment">
     <script type="text/javascript" src="bundle.js"></script>
     <div layout='column' layout-fill>
-        <md-toolbar class='md-medium-tall'>
+        <md-toolbar class='md-small-tall'>
             <header-directive></header-directive>
         </md-toolbar>
+        <spinner-directive></spinner-directive>
         <md-content flex class='md-padding'>
             <ui-view></ui-view>
         </md-content>
