--- a/source/screens/header/header.html
+++ b/source/screens/header/header.html
@@ -1,20 +1,15 @@
-<!--<md-sidenav flex=20></md-sidenav>-->
-<div class="md-toolbar-tools">
-    <div class="md-toolbar-tools">
-        <md-button aria-label="Go Back" ng-click="goBack()" ng-if="title != 'search'">
-            Go Back
+<div layout="row" layout-wrap >
+    <div flex="33">
+        <md-button class="md-raised" ng-click="goBack()" ng-if="title != 'search'" aria-label="Back" tabindex="0">
+            Back
         </md-button>
-        <h2>
-            <span>{{title}}</span>
-        </h2>
-        <span flex></span>
-        <md-button class="md-raised" aria-label="Favorite" ng-click="goToFavorite()" ng-if="title != 'favorites'">
+    </div>
+    <div flex="33" layout="row" layout-align="center center">
+        <h2><span>{{title}}</span></h2>
+    </div>
+    <div flex="33"  layout="row" layout-align="end center">
+        <md-button class="md-raised"  aria-label="Favorite" ng-click="goToFavorite()" ng-if="title != 'favorites'">
             Favorite
         </md-button>
     </div>
 </div>
-
-<!---->
-<!--<div flex>-->
-    <!--Fixed to the bottom-->
-<!--</div>-->
