--- a/source/screens/header/header.html
+++ b/source/screens/header/header.html
@@ -1,14 +1,14 @@
 <div layout="row" layout-wrap >
     <div flex="33">
-        <md-button class="md-raised" ng-click="goBack()" ng-if="title != 'search'" aria-label="Back" tabindex="0">
+        <md-button class="md-raised md-accent" ng-click="goBack()" ng-if="title != 'search'" aria-label="Back" tabindex="0">
             Back
         </md-button>
     </div>
     <div flex="33" layout="row" layout-align="center center">
-        <h2><span>{{title}}</span></h2>
+        <h2 class="text-capitalize"><span>{{title}}</span></h2>
     </div>
     <div flex="33"  layout="row" layout-align="end center">
-        <md-button class="md-raised"  aria-label="Favorite" ng-click="goToFavorite()" ng-if="title != 'favorites'">
+        <md-button class="md-raised md-accent"  aria-label="Favorite" ng-click="goToFavorite()" ng-if="title != 'favorites'">
             Favorite
         </md-button>
     </div>
