--- a/source/screens/spinner/spinner.html
+++ b/source/screens/spinner/spinner.html
@@ -1,1 +1,1 @@
-<md-progress-linear md-mode="indeterminate" ng-if="isSpinner"></md-progress-linear>
+<md-progress-linear md-mode="indeterminate" class="md-accent" ng-if="isSpinner"></md-progress-linear>
